feat: adicionar mais documentação e rotas básicas de manipulação de dados
