# application/http/user.go
@@ -1,12 +1,12 @@
 package http
 
 import (
-	"encoding/json"
 	"errors"
-	"log"
 	"net/http"
 
+	"github.com/gin-gonic/gin"
 	"github.com/gtvb/livestream/models"
+	"go.mongodb.org/mongo-driver/bson/primitive"
 	"go.mongodb.org/mongo-driver/mongo"
 	"golang.org/x/crypto/bcrypt"
 )
@@ -32,11 +32,30 @@ type SignupParamsWrapper struct {
 	}
 }
 
+// swagger:response userResponse
+type UserResponseWrapper struct {
+	// in:body
+	Body models.User
+}
+
+// swagger:response liveStreamsResponse
+type LiveStreamsResponseWrapper struct {
+	// in:body
+	Body []models.LiveStream
+}
+
 // swagger:response tokenResponse
 type TokenResponseWrapper struct {
 	// O token JWT usado para próximas requisições protegidas
 	Body struct {
 		Token string `json:"token"`
+	}
+}
+
+// swagger:response messageResponse
+type MessageResponseWrapper struct {
+	Body struct {
+		Message string `json:"message"`
 	}
 }
 
@@ -46,27 +65,27 @@ type TokenResponseWrapper struct {
 // responses:
 //
 //	200: tokenResponse
-func (env *ServerEnv) login(w http.ResponseWriter, req *http.Request) {
+//	400: messageResponse
+//	404: messageResponse
+//	500: messageResponse
+func (env *ServerEnv) login(ctx *gin.Context) {
 	var loginBody struct {
 		Email    string
 		Password string
 	}
 
-	err := json.NewDecoder(req.Body).Decode(&loginBody)
-	if err != nil {
-		log.Printf("Decode: %s\n", err.Error())
-		http.Error(w, err.Error(), http.StatusBadRequest)
+	if err := ctx.ShouldBindBodyWithJSON(&loginBody); err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"message": "failed to get request body"})
 		return
 	}
 
 	// Check against database
 	user, err := env.userRepository.GetUserByEmail(loginBody.Email)
 	if err != nil {
-		log.Printf("GetUserByEmail: %s\n", err.Error())
 		if errors.Is(err, mongo.ErrNoDocuments) {
-			http.Error(w, "could not find a user with this email/password", http.StatusNotFound)
+			ctx.JSON(http.StatusNotFound, gin.H{"message": "a user with this email/password combination does not exist"})
 		} else {
-			http.Error(w, "error while fetching user", http.StatusInternalServerError)
+			ctx.JSON(http.StatusInternalServerError, gin.H{"message": err.Error()})
 		}
 		return
 	}
@@ -74,92 +93,188 @@ func (env *ServerEnv) login(w http.ResponseWriter, req *http.Request) {
 	// Compare passwords
 	err = bcrypt.CompareHashAndPassword([]byte(user.Password), []byte(loginBody.Password))
 	if err != nil {
-		log.Printf("bcrypt: %s\n", err.Error())
-		http.Error(w, "wrong email or password", http.StatusNotFound)
+		ctx.JSON(http.StatusBadRequest, gin.H{"message": "passwords don't match"})
 		return
 	}
 
 	token, err := generateToken(user.ID)
 	if err != nil {
-		log.Printf("token: %s\n", err.Error())
-		http.Error(w, "failed to register user", http.StatusInternalServerError)
+		ctx.JSON(http.StatusBadRequest, gin.H{"message": "failed to generate token"})
+		return
 	}
 
-	w.Write([]byte(token))
+	ctx.JSON(http.StatusOK, gin.H{"token": token})
 }
 
 // swagger:route POST /users/signup users signupUser
 // Realiza o signup de um usuário e gera um token para futuras operações protegidas
 // responses:
 //
-//	200: tokenResponse
-func (env *ServerEnv) signup(w http.ResponseWriter, req *http.Request) {
+//	201: tokenResponse
+//	400: messageResponse
+//	500: messageResponse
+func (env *ServerEnv) signup(ctx *gin.Context) {
 	var signupBody struct {
 		Name     string
 		Email    string
 		Password string
 	}
 
-	err := json.NewDecoder(req.Body).Decode(&signupBody)
-	if err != nil {
-		log.Printf("Decode: %s\n", err.Error())
-		http.Error(w, err.Error(), http.StatusInternalServerError)
+	if err := ctx.ShouldBindBodyWithJSON(&signupBody); err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"message": "failed to get request body"})
 		return
 	}
 
 	// Check against database
 	user, err := env.userRepository.GetUserByEmail(signupBody.Email)
 	if err != nil && !errors.Is(err, mongo.ErrNoDocuments) {
-		log.Printf("1 GetUserByEmail: %s\n", err.Error())
-		http.Error(w, "failed to process request", http.StatusInternalServerError)
+		ctx.JSON(http.StatusBadRequest, gin.H{"message": err.Error()})
 		return
 	}
 
 	if user != nil {
-		log.Printf("no user: %s\n", err.Error())
-		http.Error(w, "a user with this email already exists", http.StatusBadRequest)
+		ctx.JSON(http.StatusBadRequest, gin.H{"message": "a user with this email already exists"})
 		return
 	}
 
 	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(signupBody.Password), 14)
 	if err != nil {
-		log.Printf("bcrypt: %s\n", err.Error())
-		http.Error(w, "failed to process request", http.StatusInternalServerError)
+		ctx.JSON(http.StatusInternalServerError, gin.H{"message": err.Error()})
 		return
 	}
 
 	newUser := models.NewUser(signupBody.Name, signupBody.Email, string(hashedPassword))
-	_, err = env.userRepository.CreateUser(newUser.Name, newUser.Email, newUser.Password)
+	userId, err := env.userRepository.CreateUser(newUser.Name, newUser.Email, newUser.Password)
 	if err != nil {
-		log.Printf("CreateUser: %s\n", err.Error())
-		http.Error(w, "failed to register user", http.StatusInternalServerError)
+		ctx.JSON(http.StatusInternalServerError, gin.H{"message": err.Error()})
 		return
 	}
 
-	token, err := generateToken(newUser.ID)
+	token, err := generateToken(userId)
 	if err != nil {
-		log.Printf("token: %s\n", err.Error())
-		http.Error(w, "failed to register user", http.StatusInternalServerError)
+		ctx.JSON(http.StatusInternalServerError, gin.H{"message": err.Error()})
+		return
 	}
 
-	w.Write([]byte(token))
+	ctx.JSON(http.StatusCreated, gin.H{"token": token})
 }
 
-// func (env *ServerEnv) allUsers(w http.ResponseWriter, req *http.Request) {
-// 	w.Header().Add("Content-Type", "application/json")
-// 	users, err := env.userRepository.GetAllUsers()
-// 	if err != nil {
-// 		log.Print(err.Error())
-// 		http.Error(w, "could not get all users", http.StatusInternalServerError)
-// 		return
-// 	}
+// swagger:route GET /users/:id users getUserProfile
+// Retorna as informações sobre um usuário dado um id válido
+//
+// responses:
+//
+//	200: userResponse
+//	404: messageResponse
+func (env *ServerEnv) getUserProfile(ctx *gin.Context) {
+	id := ctx.Param("id")
+	objId, err := primitive.ObjectIDFromHex(id)
+	if err != nil {
+		ctx.JSON(http.StatusNotFound, gin.H{"message": err.Error()})
+		return
+	}
 
-// 	usersJson, err := json.Marshal(users)
-// 	if err != nil {
-// 		log.Print(err.Error())
-// 		http.Error(w, "could not JSON encode all users", http.StatusInternalServerError)
-// 		return
-// 	}
+	user, err := env.userRepository.GetUserById(objId)
+	if err != nil {
+		ctx.JSON(http.StatusNotFound, gin.H{"message": "could not find a user with this id"})
+		return
+	}
 
-// 	w.Write(usersJson)
-// }
+	ctx.JSON(http.StatusOK, user)
+}
+
+// swagger:route GET /livestream/:user_id users livestreams getUserLiveStreams
+// Realiza o login de um usuário e gera um token para futuras operações protegidas
+//
+// responses:
+//
+//	200: liveStreamsResponse
+//	404: messageResponse
+func (env *ServerEnv) getUserLiveStreams(ctx *gin.Context) {
+	id := ctx.Param("user_id")
+	objId, err := primitive.ObjectIDFromHex(id)
+	if err != nil {
+		ctx.JSON(http.StatusNotFound, gin.H{"message": err.Error()})
+		return
+	}
+
+	livestreams, err := env.liveStreamsRepository.GetAllLiveStreamsByUserId(objId)
+	if err != nil {
+		ctx.JSON(http.StatusNotFound, gin.H{"message": err.Error()})
+		return
+	}
+
+	ctx.JSON(http.StatusOK, gin.H{"livestreams": livestreams})
+}
+
+// swagger:route DELETE /user/:user_id users deleteUser
+// Remove um usuário da base de dados, juntamente com todas as liveStreams cadastradas
+// sobre seu mesmo id
+//
+// responses:
+//
+//	200: messageResponse
+//	404: messageResponse
+func (env *ServerEnv) deleteUser(ctx *gin.Context) {
+	id := ctx.Param("user_id")
+	objId, err := primitive.ObjectIDFromHex(id)
+	if err != nil {
+		ctx.JSON(http.StatusNotFound, gin.H{"message": err.Error()})
+		return
+	}
+
+	_, err = env.liveStreamsRepository.DeleteLiveStreamsByPublisher(objId)
+	if err != nil {
+		ctx.JSON(http.StatusNotFound, gin.H{"message": "failed to delete all streams for this user"})
+		return
+	}
+
+	_, err = env.userRepository.DeleteUser(objId)
+	if err != nil {
+		ctx.JSON(http.StatusNotFound, gin.H{"message": "failed to delete this user"})
+		return
+	}
+
+	ctx.JSON(http.StatusOK, gin.H{"message": "user deleted"})
+}
+
+// swagger:route PATCH /user/:user_id users updateUser
+// Atualiza os dados do usuário identificado pelo `user_id` especificado
+// como parâmetro.
+//
+// responses:
+//
+//	200: messageResponse
+//	400: messageResponse
+func (env *ServerEnv) updateUser(ctx *gin.Context) {
+	id := ctx.Param("user_id")
+	objId, err := primitive.ObjectIDFromHex(id)
+	if err != nil {
+		ctx.JSON(http.StatusNotFound, gin.H{"message": err.Error()})
+		return
+	}
+
+	name := ctx.Query("name")
+	if name == "" {
+		ctx.JSON(http.StatusBadRequest, gin.H{"message": "expected at least one query parameter for update"})
+		return
+	}
+
+	_, err = env.userRepository.UpdateUserName(objId, name)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"message": "falied to update this user's name"})
+		return
+	}
+
+	ctx.JSON(http.StatusOK, gin.H{"message": "user updated"})
+}
+
+func (env *ServerEnv) getAllUsers(ctx *gin.Context) {
+	users, err := env.userRepository.GetAllUsers()
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, gin.H{"message": "failed to fetch all users"})
+		return
+	}
+
+	ctx.JSON(http.StatusOK, users)
+}
